selfhost/test/typechecker/assignment/variable_error_unknown.out
Error at %FILE_NAME%:1:1
Unknown variable 'a'
  |  a = 2
     ^
No variable with that name is visible in current scope
